Small CSS change to fix alignment

--- a/assets/css/extended/watch-card.css
+++ b/assets/css/extended/watch-card.css
@@ -239,6 +239,7 @@
     color: #fff;
     text-decoration: none;
     transition: opacity 0.2s;
+    margin-left: 5px;
 }
 
 .platform-link:hover {
